generated/manifests/prod-home/identity/Deployment-kanidm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: kanidm
  name: kanidm
  namespace: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kanidm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kanidm
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - server
            - -c
            - /etc/kanidm/server.toml
          command:
            - /sbin/kanidmd
          image: docker.io/kanidm/server:1.11.2@sha256:d87475bf9c9cfd24872d8b25957c9fc13fc090ace09ddc37c3b25fe394b397ac
          livenessProbe:
            httpGet:
              path: /status
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 30
          name: kanidm
          ports:
            - containerPort: 8443
              name: https
          readinessProbe:
            httpGet:
              path: /status
              port: https
              scheme: HTTPS
            periodSeconds: 10
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/kanidm/server.toml
              name: config
              readOnly: true
              subPath: server.toml
            - mountPath: /etc/kanidm/tls
              name: tls
              readOnly: true
      nodeSelector:
        kubernetes.io/hostname: compute-1
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: identity-kanidm
        - configMap:
            name: kanidm-config
          name: config
        - name: tls
          secret:
            secretName: kanidm-tls
