generated/manifests/prod-home/identity/Service-kanidm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kanidm
  name: kanidm
  namespace: identity
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: kanidm
  type: ClusterIP
