generated/manifests/prod-home/identity/NetworkPolicy-kanidm-private.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kanidm-private
  namespace: identity
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: household
      ports:
        - port: 8443
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: identity
      ports:
        - port: 8443
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: argocd
              app.kubernetes.io/name: argocd-server
      ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kanidm
  policyTypes:
    - Ingress
